--- a/Python_with_machine_learning.ipynb
+++ b/Python_with_machine_learning.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiTfwlm/uRIkHaBHqJQsUZ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMWhKc2SgT7DB37yGgawRfF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Pyhton with Machine Learning"
+        "#Pyhton with Machine Learning\n",
+        "\n",
+        "Pyhton consists of different types of libraries so that we need not to write the hard code every time. \n",
+        "Here are some of the examples of the machine learnimg libraries and its uses.\n",
+        "\n",
+        "\n",
+        "1.   Numpy - Used for the numerical computation\n",
+        "2.   Pandas - Used for the data manipulatuion\n",
+        "3.   Matplotlib, cborn, plotly - Used for the data visualization\n",
+        "\n"
       ],
       "metadata": {
         "id": "1GhqwWto624s"
@@ -38,7 +48,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Numpy"
+        "##Numpy\n",
+        "\n",
+        "Numpy stands for Numerical python. It provides a multi dimensional arrays and number of functins or methods for the numerical compuation and scientific computation. "
       ],
       "metadata": {
         "id": "iUNY7szm_To7"
@@ -1072,10 +1084,83 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "* Saving and Loading the Numpy Array\n",
+        "\n",
+        "Using the Numpy.save we can store the array and .load to load the data\n",
+        "\n",
+        "1. np.save('Name to save the array',array that want to be saved)\n",
+        "\n",
+        "2. np.load('Name of the saved array')"
+      ],
+      "metadata": {
+        "id": "xUce7pgVIqz4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "L1 = np.array([77,44,33,22,88])\n",
+        "np.save('ThisArray',L1)                 # Saving the numpy array"
+      ],
+      "metadata": {
+        "id": "o8j3Kw3o_QMV"
+      },
+      "execution_count": 146,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L2 = np.load('ThisArray.npy')          # Loading the numpy array\n",
+        "L2                                     # Should give the .npy(Essential) i.e., standard of numpy"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ILmdMqyvKA_H",
+        "outputId": "39a9d004-df62-43bf-b65c-ecb164e95bd1"
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([77, 44, 33, 22, 88])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Pandas"
+      ],
+      "metadata": {
+        "id": "xCy-NcFnLExs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Introduction to pandas"
+      ],
+      "metadata": {
+        "id": "Wjfo4PmeLTgt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "o8j3Kw3o_QMV"
+        "id": "fwtPEZFrKLrd"
       },
       "execution_count": null,
       "outputs": []
